# DjangoSetting

./: .env_sample  catalog.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_rename_price_purchase_product_price.py  0003_product_views_counter_alter_product_price.py  0004_alter_product_options.py  0005_product_owner.py
catalog/templates/: base.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  product_detail.html  product_list.html
config/: settings.py
users/: admin.py  forms.py  models.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_user_delete_customuser.py  0003_user_token.py
